--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   shiny:
-    image: "viz_seq_matrix"
+    image: "trevf/viz_seq_matrix:dev"
     ports:
       - "8787:8787"
     volumes:
